<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="#123456">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"/>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/username"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:textColor="#ffffff"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="130dp"
            android:text="@string/not_registered"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textColor="#04ea00"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>